--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,19 @@
 <main>
     <ul id="users">
         <li>
-            <app-user/>
+            <app-user [name]="users[0].name"/>
+        </li>
+        <li>
+            <app-user [name]="users[1].name"/>
+        </li>
+        <li>
+            <app-user [name]="users[2].name"/>
+        </li>
+        <li>
+            <app-user [name]="users[3].name"/>
+        </li>
+        <li>
+            <app-user [name]="users[4].name"/>
         </li>
     </ul>
 </main>
