--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,5 +1,5 @@
 <div>
-    <button>
-        <span>{{selectedContent.name}}</span>
+    <button (click)="onSelectContent()">
+        <span>{{name}}</span>
     </button>
 </div>
